<resources>
    <string name="app_name">QR Scan Master</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- main menu -->
    <string name="main_menu_create">Create Qr</string>
    <string name="main_menu_scanner">Scanner</string>
    <string name="main_menu_history">History</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_title">Menu</string>
    <string name="main_menu_about">About</string>
    <!-- Title views -->
    <string name="view_create">Create</string>
    <string name="view_data">Information</string>
    <string name="view_history">History</string>
    <string name="view_settings">Settings</string>
    <!-- btn  info view block-->
    <string name="info_save_img">Saver qr</string>
    <string name="info_share_img">Share</string>
    <string name="info_copy_data">Copy</string>
    <!-- btn info view options-->
    <string name="info_btn_wifi_pass">Copy password</string>
    <string name="info_btn_url">Open url</string>
    <string name="info_btn_store">Go store</string>
    <string name="info_btn_sms">Send Sms</string>
    <string name="info_btn_location">View location</string>
    <string name="info_btn_flight">Look state flight</string>
    <string name="info_btn_contact">Add contact</string>
    <string name="info_btn_email">Send email</string>
    <string name="info_btn_wifi_connect">Connect Network</string>

    <string name="info_snck_copy_all">Copied to clipboard! 📋</string>
    <string name="info_snck_pass">Password copied 📋</string>
    <string name="info_snck_saved">Image saved</string>
    <!-- create qr view-->

    <string name="create_btn_app">App</string>
    <string name="create_btn_email">Email</string>
    <string name="create_btn_sms">Sms</string>
    <string name="create_btn_url">Url</string>
    <string name="create_btn_wifi">Wifi</string>
    <string name="create_btn_vcard">Vcard</string>
    <string name="create_btn_location">Location</string>

    <!-- create qr view interface-->
    <string name="create_qr_email_prin">Email</string>
    <string name="create_qr_email_subject">Subject</string>
    <string name="create_qr_email_message">Message</string>

    <string name="create_qr_sms_prin">Sms</string>
    <string name="create_qr_sms_phone">Phone number</string>

    <string name="create_qr_wifi_prin">Wifi</string>
    <string name="create_qr_wifi_encryp">Encryption</string>
    <string name="create_qr_wifi_name">Network Name</string>
    <string name="create_qr_wifi_pass">Password</string>
    <string name="create_qr_wifi_hidden">Hidden</string>

    <string name="create_qr_vcard_first">First Name</string>
    <string name="create_qr_vcard_last">Last Name</string>

    <string name="create_qr_location_latitude">Latitude</string>
    <string name="create_qr_location_longitude">Longitude</string>
    <!-- about view-->
    <string name="about_update">Next update</string>
    <string name="about_items">Custom Qr Themes</string>
    <string name="about_version">Version %1$s</string>
    <string name="about_tell">Tell me</string>
    <string name="about_credit_ani">Credits to LottieFiles, Anahita Salimi</string>
    <string name="about_copyright">Copyright %1$s, made by Gtrab618</string>

    <!-- toast message-->
    <string name="home_notfound_qr">Qr not found</string>
    <string name="home_error_uri">Image not recovered</string>
    <string name="home_notselect_qr">Image not selected</string>
    <string name="home_scan_manual_title">Scanner</string>
    <string name="home_scan_manual_message">View this QR code?</string>
    <string name="infoqr_app_notfound">app not found</string>
    <string name="infoqr_url_invalid">Invalid url</string>
    <string name="infoqr_cancel">Cancel</string>
    <string name="infoqr_delete">Deleted</string>

    <!-- dialog message-->
    <string name="infoqr_dlg_title">Delete</string>
    <string name="infoqr_dlg_confirm">Confirm</string>

    <string name="infoqr_dlg_edit_title">Edit name</string>
    <string name="infoqr_dlg_edit_save">Save</string>

    <string name="infoqr_dlg_yes">Yes</string>
    <string name="infoqr_dlg_not">No</string>

    <string name="hs_dlg_title">Clear History</string>
    <string name="hs_dlg_message">Do you want to delete all history?</string>

    <string name="main_dlg_title">Camera Permission Required</string>
    <string name="main_dlg_message">Camera access is needed to scan barcodes.</string>
    <string name="main_dlg_ok">OK</string>

    <string name="main_dlg_message_denied">Permissions->Not Allowed-> Camera-> Allow</string>

    <string name="infoqr_dlg_img_title">Media Access Required</string>
    <string name="infoqr_dlg_img_message">Access to media files is needed to save photos.</string>
    <string name="infoqr_dlg_img_message_denied">Permissions -> Not allowed -> Files and media -> Allow</string>
    <!-- save png -->

    <string name="savePhoto">Save</string>



    <!-- setting view-->

    <!-- general -->
    <string name="setting_general_title">General</string>

    <string name="setting_vibration_title">Vibration</string>
    <string name="setting_vibration">Vibrate to scan</string>
    <string name="setting_clipboard_title">Clipboard</string>
    <string name="setting_clipboard">Copy to clipboard</string>
    <string name="setting_confirmed_title">Confirmed qr scan</string>
    <string name="setting_confirmed">The qr is accept o reject</string>

    <string name="setting_history_title">History</string>
    <string name="setting_save_qr_create">Save created barcode</string>
    <string name="setting_save_qr_scan">Save scanned barcode</string>

</resources>