<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory app:title="@string/setting_general_title">

        <androidx.preference.SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="vibrate"
            app:summary="@string/setting_vibration"
            app:title="@string/setting_vibration_title" />

        <androidx.preference.SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="copyClipBoard"
            app:summary="@string/setting_clipboard"
            app:title="@string/setting_clipboard_title" />
        <androidx.preference.SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="confirmScanManual"
            app:summary="@string/setting_confirmed"
            app:title="@string/setting_confirmed_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/setting_next_title">

        <androidx.preference.SwitchPreferenceCompat
            app:defaultValue="false"
            app:summary="@string/setting_double"
            app:title="@string/setting_double" />
    </PreferenceCategory>
</PreferenceScreen>