<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_create"
            android:icon="@drawable/nav_create"
            android:title="@string/main_menu_create" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_scanner"
            android:title="@string/main_menu_scanner" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/nav_history"
            android:title="@string/main_menu_history" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/nav_setting"
            android:title="@string/main_menu_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/nav_about"
            android:title="About" />


        <item android:title="">
            <menu>
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/nav_logout"
                    android:title="Logout" />


            </menu>
        </item>


    </group>

</menu>